[package]
name = "simple-blockchain-explorer-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
strum = { version = "0.26.2" , features = ["derive"]}
strum_macros = "0.26.2"
url = { version = "2.4.0", features = ["default"] }
